crates/kata-driver/tests/snapshots/examples_snapshot__bigint.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
9999999999999999999800000000000000000001
