crates/kata-driver/tests/snapshots/examples_snapshot__is_prime.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
True
True
False
False
True
