crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@alias_newtype.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
assertion_line: 100
expression: output
---
70.0
70.0
1.75
