crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@arithmetic.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
3
--- stderr ---
[resolution] warning: `read` tem overloads com aridades diferentes (1 vs 2) — aridade padrão = 1 (primeira declaração)
[resolution] warning: `read` tem overloads com aridades diferentes (1 vs 2) — aridade padrão = 1 (primeira declaração)
