crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@cache.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
assertion_line: 100
expression: output
---
10
