crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@enum_refined_alias.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
Normal(22.857142857142858)
Normal(22.857142857142858)
70.0
3.0625
--- stderr ---
[resolution] warning: tipo base Float pode não implementar a interface NUM (PositiveInt refines NUM) — validação final em infer_module
